# somerville-law-bot

./: .gitignore  CHANGELOG.md  README.md  combine_law.py  fetch_somerville_law.py  fetch_somerville_zoning.py  pyproject.toml  railway.json  render_markdown_html.py  somerville-law-combined.md  somerville-law-non-zoning.md  somerville-law-non-zoning.readable.html  somerville-zoning.md  somerville-zoning.readable.html
app/: DESIGN.md  agent.py  indexer.py  law_tools.py  server.py  tables.py  wiki_build.py
app/data/: toc.txt
app/static/: index.html
app/wiki/: abandoned-vehicles.md  adus-additions.md  affordable-housing.md  alcohol.md  animals-chickens.md  bees.md  bicycles-ebikes.md  building-permits.md  cats.md  city-council.md  condo-conversion.md  demolition.md  dogs.md  dumpsters.md  elections.md  fences.md  fireworks.md  food-trucks.md  graffiti.md  historic-districts.md  home-businesses.md  hours-of-operation.md  leaf-blowers.md  marijuana.md  mayor.md  noise.md  parking-permits.md  plastic-bags-polystyrene.md  pools.md  restaurants-licensing.md  rodent-control.md  short-term-rentals.md  sidewalks-obstructions.md  signs.md  snow-sidewalks.md  street-cleaning.md  taxes-fees.md  tenants-rental-registration.md  tobacco-smoking.md  trash-recycling-composting.md  (+4 more)
evals/: questions.yaml  run.py
tests/: test_agent.py  test_server.py  test_tables.py
